k8s/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: guardian
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: guardian
  name: deployment-guardian
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-guardian
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-guardian
    spec:
      containers:
        - image: public.ecr.aws/i0t3p8w7/guardian-ecr:latest
          imagePullPolicy: Always
          name: app-guardian
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  namespace: guardian
  name: service-guardian
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-guardian
